--- a/front_end/templates/index1.html
+++ b/front_end/templates/index1.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="icon" href="data:,">
-    <title>HLS视频播放器</title>
-    <!-- 引入video.js样式 -->
-    <link href="{{ url_for('static', filename='video-js.min.css') }}" rel="stylesheet">
-    <style>
-        /* 设置video.js播放器的宽度和高度 */
-        .video-js {
-            width: 1728px;
-            height: 720px;
-            margin: 0 auto;
-        }
+  <head>
+    <meta charset="utf-8">
+    <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
+    <meta name="referrer" content="no-referrer">
+    <title>播放器</title>
+    <style type="text/css">
+      html, body {width:100%;height:100%;margin:auto;overflow: hidden;}
+      body {display:flex;}
+      #mse {flex:auto;}
     </style>
-</head>
-<body style="text-align: center;">
-    <h1>HLS视频播放器</h1>
-    <!-- video.js播放器 -->
-    <!-- <div id="player" style="width: 1728px;height: 720px;"> -->
-        <video
-            id="video-player"
-            class="video-js vjs-default-skin vjs-big-play-centered"
-            controls
-            preload="auto"
-            data-setup="{}"
-            onerror="handleError()">
-            <source src="static/hls_file/output.m3u8" type="application/x-mpegURL">
-        </video>
-    <!-- </div> -->
-    <!-- 引入video.js脚本 -->
-    <script src="{{ url_for('static', filename='video.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='videojs-contrib-hls.min.js') }}"></script>
-    <script>
-        var videoPlayer = videojs('video-player', {
-            autoplay: false,
-            preload: "auto",
-            bigPlayButton: true,
-            textTrackDisplay: false,
-            posterImage: false,
-            errorDisplay: false,
-            
-        });
+    <link rel="stylesheet" href="https://unpkg.byted-static.com/xgplayer/3.0.1/dist/index.min.css">
+    <script type="text/javascript">
+        document.addEventListener('ready', () => {
+          const resizeObserver = new ResizeObserver(() => {
+            document.getElementById('mse').style.height = document.body.clientHeight + 'px'
+          })
+          resizeObserver.observe(document.body)
+        })
+    </script>
+  </head>
+  <body>
+    <div id="mse"></div>
+    <script src="https://unpkg.byted-static.com/xgplayer/3.0.1/dist/index.min.js" charset="utf-8"></script>
+    <script src="https://unpkg.byted-static.com/xgplayer-hls/3.0.1/dist/index.min.js" charset="utf-8"></script>
+    <script type="text/javascript">
+      let videoPlayer = new window.Player({
+          id: 'mse',
+          //url: './front_end/hls/static/hls_file/output.m3u8',
+          url: './output.m3u8',
+          autoplay: false,
+          playsinline: true,
+          height: window.innerHeight,
+          width: window.innerWidth,
+          plugins: [window.HlsPlayer]
+      });
+
         // 记录中断播放次数
         var pauseCount = 0;
         // 记录暂停时间
@@ -247,7 +242,12 @@
         }
 
 
-    </script>
-</body>
-</html>
 
+
+
+
+
+
+    </script>
+  </body>
+</html>
